Поменять реализацию stats-client