@@ -19,7 +19,6 @@ import ru.practicum.ewm.event.repository.EventRepository;
 
 
 import ru.practicum.ewm.exception.NotFoundException;
-import ru.practicum.ewm.feign.StatClient;
 import ru.practicum.ewm.feign.UserClient;
 
 import java.time.LocalDateTime;
@@ -33,7 +32,6 @@ import java.util.stream.Collectors;
 public class CompilationServiceImpl implements CompilationService {
     private final CompilationRepository compilationRepository;
     private final EventRepository eventRepository;
-    private final StatClient statClient;
     private final UserClient userClient;
 
     @Override
@@ -124,9 +122,6 @@ public class CompilationServiceImpl implements CompilationService {
         if (events.isEmpty()) {
             return Collections.emptyList();
         }
-        LocalDateTime minTime = events.stream().map(Event::getCreatedOn).min(Comparator.comparing(Function.identity())).get();
-        List<String> urisList = events.stream().map(event -> "/events/" + event.getId()).toList();
-
         List<Long> userIds = events.stream()
                 .map(Event::getInitiatorId)
                 .distinct()
@@ -135,22 +130,10 @@ public class CompilationServiceImpl implements CompilationService {
                 .getAllUsers(userIds, 0, userIds.size()).stream()
                 .collect(Collectors.toMap(UserDto::getId, Function.identity()));
 
-        List<StatsDto> statsList = statClient.getStats(minTime.minusSeconds(1), LocalDateTime.now(), urisList, false);
-
-        return events.stream().map(event -> {
-                    Optional<StatsDto> result = statsList.stream()
-                            .filter(statsDto -> statsDto.getUri().equals("/events/" + event.getId()))
-                            .findFirst();
-                    if (result.isPresent()) {
-                        return EventMapper.mapToShortDto(event, result.get().getHits(),
-                                usersMap.getOrDefault(event.getInitiatorId(),
-                                        UserDto.builder().id(0L).name("Unknown").build()));
-                    } else {
-                        return EventMapper.mapToShortDto(event, 0L, usersMap.getOrDefault(event.getInitiatorId(),
-                                UserDto.builder().id(0L).name("Unknown").build()));
-                    }
-                })
-                .collect(Collectors.toList());
+        return events.stream().map(event ->
+                        EventMapper.mapToShortDto(event, 0d, usersMap.getOrDefault(event.getInitiatorId(),
+                                UserDto.builder().id(event.getInitiatorId()).name("UNKNOWN").build())))
+                .toList();
     }
 }
 
